--- a/src/package.json
+++ b/src/package.json
@@ -15,7 +15,11 @@
       "react-router-dom": "^6.12.1",
       "react-scripts": "5.0.1",
       "react-table": "^7.8.0",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "apollo-server-express": "^3.12.0",
+      "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.0",
+      "mongoose": "^7.2.4"
     },
     "scripts": {
       "start": "react-scripts start",
